--- a/public/css/app.css
+++ b/public/css/app.css
@@ -589,6 +589,15 @@ video {
 .top-11 {
   top: 2.75rem;
 }
+.bottom-0 {
+  bottom: 0px;
+}
+.bottom-20 {
+  bottom: 5rem;
+}
+.right-10 {
+  right: 2.5rem;
+}
 .z-0 {
   z-index: 0;
 }
@@ -600,6 +609,9 @@ video {
 }
 .z-50 {
   z-index: 50;
+}
+.z-10 {
+  z-index: 10;
 }
 .float-right {
   float: right;
@@ -718,6 +730,15 @@ video {
 }
 .mt-\[4px\] {
   margin-top: 4px;
+}
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
+}
+.mr-0 {
+  margin-right: 0px;
 }
 .box-border {
   box-sizing: border-box;
@@ -915,6 +936,9 @@ video {
 }
 .items-center {
   align-items: center;
+}
+.justify-start {
+  justify-content: flex-start;
 }
 .justify-end {
   justify-content: flex-end;
@@ -1176,6 +1200,36 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-theme-primary\/40 {
+  background-color: rgb(220 53 69 / 0.4);
+}
+.bg-\[\#F8DF00\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 223 0 / var(--tw-bg-opacity));
+}
+.bg-\[\#FCF18CF\] {
+  background-color: #FCF18CF;
+}
+.bg-\[\#FCF18F\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 241 143 / var(--tw-bg-opacity));
+}
+.bg-\[\#FFCED3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 206 211 / var(--tw-bg-opacity));
+}
+.bg-\[\#CEF9CE\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(206 249 206 / var(--tw-bg-opacity));
+}
+.bg-\[\#169B5B\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 155 91 / var(--tw-bg-opacity));
+}
+.bg-\[\#C4E6D6\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(196 230 214 / var(--tw-bg-opacity));
+}
 .fill-current {
   fill: currentColor;
 }
@@ -1359,6 +1413,10 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
 .font-bold {
   font-weight: 700;
 }
@@ -1486,6 +1544,14 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-\[\#16DA12\] {
+  --tw-text-opacity: 1;
+  color: rgb(22 218 18 / var(--tw-text-opacity));
+}
+.text-\[\#169B5B\] {
+  --tw-text-opacity: 1;
+  color: rgb(22 155 91 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
@@ -2255,6 +2321,15 @@ input:checked ~ .line {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
+.hover\:bg-white\/20:hover {
+  background-color: rgb(255 255 255 / 0.2);
+}
+.hover\:bg-theme-primary\/40:hover {
+  background-color: rgb(220 53 69 / 0.4);
+}
+.hover\:bg-theme-primary\/90:hover {
+  background-color: rgb(220 53 69 / 0.9);
+}
 .hover\:text-gray-400:hover {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -2869,6 +2944,14 @@ input:checked ~ .line {
 
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 
   .lg\:justify-normal {
