--- a/public/css/app.css
+++ b/public/css/app.css
@@ -589,15 +589,6 @@ video {
 .top-11 {
   top: 2.75rem;
 }
-.bottom-0 {
-  bottom: 0px;
-}
-.bottom-20 {
-  bottom: 5rem;
-}
-.right-10 {
-  right: 2.5rem;
-}
 .z-0 {
   z-index: 0;
 }
@@ -609,9 +600,6 @@ video {
 }
 .z-50 {
   z-index: 50;
-}
-.z-10 {
-  z-index: 10;
 }
 .float-right {
   float: right;
@@ -649,6 +637,9 @@ video {
 }
 .mb-4 {
   margin-bottom: 1rem;
+}
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 .mb-6 {
   margin-bottom: 1.5rem;
@@ -731,14 +722,8 @@ video {
 .mt-\[4px\] {
   margin-top: 4px;
 }
-.mb-5 {
-  margin-bottom: 1.25rem;
-}
-.mb-8 {
-  margin-bottom: 2rem;
-}
-.mr-0 {
-  margin-right: 0px;
+.mt-40 {
+  margin-top: 10rem;
 }
 .box-border {
   box-sizing: border-box;
@@ -805,6 +790,15 @@ video {
 }
 .h-screen {
   height: 100vh;
+}
+.h-auto {
+  height: auto;
+}
+.h-\[100vh\] {
+  height: 100vh;
+}
+.h-\[100\%\] {
+  height: 100%;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1131,9 +1125,25 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
+.bg-\[\#C4E6D6\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(196 230 214 / var(--tw-bg-opacity));
+}
+.bg-\[\#CEF9CE\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(206 249 206 / var(--tw-bg-opacity));
+}
 .bg-\[\#F9F9F9\] {
   --tw-bg-opacity: 1;
   background-color: rgb(249 249 249 / var(--tw-bg-opacity));
+}
+.bg-\[\#FCF18F\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 241 143 / var(--tw-bg-opacity));
+}
+.bg-\[\#FFCED3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 206 211 / var(--tw-bg-opacity));
 }
 .bg-\[\#dcdcdc\] {
   --tw-bg-opacity: 1;
@@ -1199,36 +1209,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-theme-primary\/40 {
-  background-color: rgb(220 53 69 / 0.4);
-}
-.bg-\[\#F8DF00\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 223 0 / var(--tw-bg-opacity));
-}
-.bg-\[\#FCF18CF\] {
-  background-color: #FCF18CF;
-}
-.bg-\[\#FCF18F\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 241 143 / var(--tw-bg-opacity));
-}
-.bg-\[\#FFCED3\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 206 211 / var(--tw-bg-opacity));
-}
-.bg-\[\#CEF9CE\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(206 249 206 / var(--tw-bg-opacity));
-}
-.bg-\[\#169B5B\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 155 91 / var(--tw-bg-opacity));
-}
-.bg-\[\#C4E6D6\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(196 230 214 / var(--tw-bg-opacity));
 }
 .fill-current {
   fill: currentColor;
@@ -1389,6 +1369,10 @@ video {
   font-size: 1.875rem;
   line-height: 2.25rem;
 }
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
 .text-7xl {
   font-size: 4.5rem;
   line-height: 1;
@@ -1412,10 +1396,6 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
-}
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
 }
 .font-bold {
   font-weight: 700;
@@ -1452,6 +1432,14 @@ video {
 }
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+.text-\[\#169B5B\] {
+  --tw-text-opacity: 1;
+  color: rgb(22 155 91 / var(--tw-text-opacity));
+}
+.text-\[\#16DA12\] {
+  --tw-text-opacity: 1;
+  color: rgb(22 218 18 / var(--tw-text-opacity));
 }
 .text-\[\#576B80\] {
   --tw-text-opacity: 1;
@@ -1544,14 +1532,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-\[\#16DA12\] {
-  --tw-text-opacity: 1;
-  color: rgb(22 218 18 / var(--tw-text-opacity));
-}
-.text-\[\#169B5B\] {
-  --tw-text-opacity: 1;
-  color: rgb(22 155 91 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
@@ -2324,12 +2304,6 @@ input:checked ~ .line {
 .hover\:bg-white\/20:hover {
   background-color: rgb(255 255 255 / 0.2);
 }
-.hover\:bg-theme-primary\/40:hover {
-  background-color: rgb(220 53 69 / 0.4);
-}
-.hover\:bg-theme-primary\/90:hover {
-  background-color: rgb(220 53 69 / 0.9);
-}
 .hover\:text-gray-400:hover {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
@@ -2942,16 +2916,12 @@ input:checked ~ .line {
     max-width: 36rem;
   }
 
-  .lg\:grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
   .lg\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 
   .lg\:justify-normal {
