--- a/public/css/app.css
+++ b/public/css/app.css
@@ -701,6 +701,9 @@ video {
 .mt-4 {
   margin-top: 1rem;
 }
+.mt-40 {
+  margin-top: 10rem;
+}
 .mt-5 {
   margin-top: 1.25rem;
 }
@@ -721,9 +724,6 @@ video {
 }
 .mt-\[4px\] {
   margin-top: 4px;
-}
-.mt-40 {
-  margin-top: 10rem;
 }
 .box-border {
   box-sizing: border-box;
@@ -779,9 +779,6 @@ video {
 .h-9 {
   height: 2.25rem;
 }
-.h-\[300px\] {
-  height: 300px;
-}
 .h-\[528px\] {
   height: 528px;
 }
@@ -790,15 +787,6 @@ video {
 }
 .h-screen {
   height: 100vh;
-}
-.h-auto {
-  height: auto;
-}
-.h-\[100vh\] {
-  height: 100vh;
-}
-.h-\[100\%\] {
-  height: 100%;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1543,6 +1531,9 @@ video {
 .caret-theme-primary {
   caret-color: #DC3545;
 }
+.accent-theme-primary {
+  accent-color: #DC3545;
+}
 .opacity-0 {
   opacity: 0;
 }
@@ -2281,6 +2272,10 @@ input:checked ~ .line {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
+.hover\:bg-gray-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
 .hover\:bg-gray-50:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
@@ -2866,6 +2861,10 @@ input:checked ~ .line {
 }
 @media (min-width: 768px) {
 
+  .md\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2906,6 +2905,10 @@ input:checked ~ .line {
 
   .lg\:hidden {
     display: none;
+  }
+
+  .lg\:w-80 {
+    width: 20rem;
   }
 
   .lg\:w-96 {
