--- a/public/css/app.css
+++ b/public/css/app.css
@@ -725,6 +725,9 @@ video {
 .mt-\[4px\] {
   margin-top: 4px;
 }
+.-mt-2 {
+  margin-top: -0.5rem;
+}
 .box-border {
   box-sizing: border-box;
 }
@@ -818,9 +821,6 @@ video {
 .w-80 {
   width: 20rem;
 }
-.w-96 {
-  width: 24rem;
-}
 .w-\[40rem\] {
   width: 40rem;
 }
@@ -832,15 +832,6 @@ video {
 }
 .w-full {
   width: 100%;
-}
-.w-\[\] {
-  width: ;
-}
-.w-\[30rem\] {
-  width: 30rem;
-}
-.w-\[20rem\] {
-  width: 20rem;
 }
 .max-w-6xl {
   max-width: 72rem;
@@ -869,14 +860,38 @@ video {
 .max-w-xl {
   max-width: 36rem;
 }
+.max-w-xs {
+  max-width: 20rem;
+}
+.max-w-\[150px\] {
+  max-width: 150px;
+}
+.max-w-\[260px\] {
+  max-width: 260px;
+}
+.max-w-\[270px\] {
+  max-width: 270px;
+}
+.max-w-\[290px\] {
+  max-width: 290px;
+}
+.max-w-\[300px\] {
+  max-width: 300px;
+}
+.max-w-\[320px\] {
+  max-width: 320px;
+}
+.max-w-\[340px\] {
+  max-width: 340px;
+}
 .flex-1 {
   flex: 1 1 0%;
 }
-.flex-none {
-  flex: none;
-}
 .flex-auto {
   flex: 1 1 auto;
+}
+.flex-none {
+  flex: none;
 }
 .shrink-0 {
   flex-shrink: 0;
@@ -902,6 +917,10 @@ video {
 }
 .translate-y-4 {
   --tw-translate-y: 1rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.rotate-180 {
+  --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-100 {
@@ -1154,6 +1173,10 @@ video {
 .bg-\[\#dcdcdc\] {
   --tw-bg-opacity: 1;
   background-color: rgb(220 220 220 / var(--tw-bg-opacity));
+}
+.bg-\[\#f2f2f2\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
 }
 .bg-disabled {
   --tw-bg-opacity: 1;
@@ -1538,10 +1561,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-.text-neutral-800 {
-  --tw-text-opacity: 1;
-  color: rgb(38 38 38 / var(--tw-text-opacity));
 }
 .underline {
   text-decoration-line: underline;
@@ -2929,12 +2948,12 @@ input:checked ~ .line {
     width: 24rem;
   }
 
-  .lg\:w-\[40rem\] {
-    width: 40rem;
-  }
-
   .lg\:w-\[20rem\] {
     width: 20rem;
+  }
+
+  .lg\:w-\[40rem\] {
+    width: 40rem;
   }
 
   .lg\:max-w-xl {
